Add animejs min and bootstrap js and css to Folder Package

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Music Player</title>
+     <link rel="stylesheet" href="./source/CSS/style.css">
+     <link rel="stylesheet" href="./package/bootstrap.min.css">
 </head>
 <body>
+
      
+     
+     <script src="./source/JavaScript/app.js"></script>
+     <script src="./package/bootstrap.min.js"></script>
+     <script src="./package/anime.min.js"></script>
 </body>
 </html>
