--- a/index.html
+++ b/index.html
@@ -23,57 +23,16 @@
                               <h1 class="fs-6">Music Player</h1>
                               <button class="click-sidebar btn border-0"><i class="fa fa-bars"></i></button>
                          </div>
-                         <div class="sideBar-list bg-body-secondary rounded-3 d-none">
-                              <div class="d-flex flex-column">
-                                   <div class="container d-flex justify-content-between align-items-center mt-2">
-                                        <h2 class="fs-6">playList Music</h2>
-                                        <button class="click-close btn border-0 text-danger"><i
-                                                  class="fa fa-close"></i></button>
-                                   </div>
-                                   <div
-                                        class="play-list container d-flex flex-column justify-content-start align-items-center">
-                                        <div
-                                             class="item-music w-100 h-50 bg-body d-flex flex-row justify-content-between align-items-center mt-2">
-                                             <div>
-                                                  <img src="./public/image/img-cover-1.jpg" alt="cover"
-                                                       class="image-cover-playList position-relative">
-                                                  <span class="play-song ms-2" data-name="song-1"><i
-                                                            class="fa fa-2x fa-play-circle"></i></span>
-                                             </div>
-                                             <div class="d-flex flex-column">
-                                                  <span class="name-music fs-6 fst-italic">Nistametoon</span>
-                                                  <span class="name-songer fs-6 fst-italic">MohammadReza Shayea</span>
-                                             </div>
-                                        </div>
-                                        <div
-                                             class="item-music w-100 h-50 bg-body d-flex flex-row justify-content-between align-items-center mt-2">
-                                             <div>
-                                                  <img src="./public/image/img-cover-2.jpg" alt="cover"
-                                                       class="image-cover-playList position-relative">
-                                                  <span class="play-song ms-2" data-name="song-1"><i
-                                                            class="fa fa-2x fa-play-circle"></i></span>
-                                             </div>
-                                             <div class="d-flex flex-column">
-                                                  <span class="name-music fs-6 fst-italic">Khiz</span>
-                                                  <span class="name-songer fs-6 fst-italic">MohammadReza Shayea</span>
-                                             </div>
-                                        </div>
-                                        <div
-                                             class="item-music w-100 h-50 bg-body d-flex flex-row justify-content-between align-items-center mt-2">
-                                             <div>
-                                                  <img src="./public/image/img-cover-3.jpg" alt="cover"
-                                                       class="image-cover-playList position-relative">
-                                                  <span class="play-song ms-2" data-name="song-1"><i
-                                                            class="fa fa-2x fa-play-circle"></i></span>
-                                             </div>
-                                             <div class="d-flex flex-column">
-                                                  <span class="name-music fs-6 fst-italic">Man Asbaniam</span>
-                                                  <span class="name-songer fs-6 fst-italic">MohammadReza Shayea</span>
-                                             </div>
-                                        </div>
-                                   </div>
-                              </div>
+                         <!-- image cover Music currentlly -->
+                         <div class="d-flex flex-column justify-content-center align-items-center">
+                              <img src="./public/image/img-cover-1.jpg" class="image-cover img-fluid w-50 h-50 mt-5 rounded-3 p-1" alt="cover">
                          </div>
+                         <!-- duration time and Current time -->
+                         <div class="timeLine w-50 mx-auto d-flex flex-row justify-content-between align-items-center mt-2">
+                              <span class="durationTime fs-5">00:00</span>
+                              <span class="currentTime fs-5">00:00</span>
+                         </div>
+                         <!-- display time line -->
                     </div>
                </div>
           </div>
