select element HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
      <section id="player">
           <div class="container d-flex justify-content-center align-items-center">
                <div class="player-box bg-body-tertiary rounded-3">
+                    <!-- Audio Music -->
+                    <audio src="./music/01-Nistametoon.mp3"></audio>
                     <div class="box-main container d-flex flex-column position-relative">
                          <div class="d-flex flex-row justify-content-between align-items-center mt-2">
                               <h1 class="fs-6">Music Player</h1>
@@ -39,7 +41,7 @@
                          <!-- section Data Music -->
                          <div class="d-flex flex-column justify-content-center align-items-center">
                               <h4 class="name-song fs-5 pt-2">Nistametoon</h4>
-                              <h4 class="name-song fs-6 fst-italic text-danger pb-2">MohammadReza Shayea</h4>
+                              <h4 class="name-songer fs-6 fst-italic text-danger pb-2">MohammadReza Shayea</h4>
                          </div>
                          <!-- section button's Music Player -->
                          <div class="container d-flex flex-row justify-content-center align-items-center mt-3">
