Click offsetX progress

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                               <button class="btn-Previous btn border-0 text-secondary"><i class="fa fa-3x fa-backward"></i></button>
                               <button class="btn-play btn border-0 text-secondary"><i class="fa fa-3x fa-play-circle"></i></button>
                               <button class="btn-next btn border-0 text-secondary"><i class="fa fa-3x fa-forward"></i></button>
-                              <button class="btn-repeat btn border-0 text-secondary"><i class="fa fa-1x fa-repeat dangers"></i></button>
+                              <button class="btn-repeat btn border-0 text-secondary" data-repeat="ture"><i class="fa fa-1x fa-repeat dangers"></i></button>
                          </div>
                     </div>
                </div>
